--- a/client/src/pages/employeeLanding/EmployeeLanding.css
+++ b/client/src/pages/employeeLanding/EmployeeLanding.css
@@ -16,7 +16,7 @@
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  /* gap: 20px; */
 }
 
 /* Profile picture section */
@@ -108,7 +108,7 @@ h3 {
   margin-top: 20px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  /* gap: 20px; */
 }
 
 /* Form rows and groups */
